--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,20 +1,4 @@
+version: '3.6'
+services:
   nodered:
-    container_name: nodered
-    build: ./services/nodered/.
-    restart: unless-stopped
-    user: "0"
-    environment:
-    - TZ=Etc/UTC
-    ports:
-    - "1880:1880"
-    volumes:
-    - ./volumes/nodered/data:/data
-    - ./volumes/nodered/ssh:/root/.ssh
-    - /var/run/docker.sock:/var/run/docker.sock
-    - /var/run/dbus/system_bus_socket:/var/run/dbus/system_bus_socket
-    devices:
-#    - "/dev/ttyAMA0:/dev/ttyAMA0"
-#    - "/dev/vcio:/dev/vcio"
-#    - "/dev/gpiomem:/dev/gpiomem"
-    networks:
-    - iotstack_nw
+    devices: []
