--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,10 +65,10 @@ services:
     - ./volumes/nodered/ssh:/root/.ssh
     - /var/run/docker.sock:/var/run/docker.sock
     - /var/run/dbus/system_bus_socket:/var/run/dbus/system_bus_socket
-    devices:
-     - "/dev/ttyAMA0:/dev/ttyAMA0"
-     - "/dev/vcio:/dev/vcio"
-     - "/dev/gpiomem:/dev/gpiomem"
+    devices: [] 
+#      - "/dev/ttyAMA0:/dev/ttyAMA0"
+#      - "/dev/vcio:/dev/vcio"
+#      - "/dev/gpiomem:/dev/gpiomem"
     networks:
     - iotstack_nw
 networks:
